--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         body {
             font-family: Arial, sans-serif;
             max-width: 800px;
-            margin: 0 auto;
-            padding: 10px;
+            margin: 10px auto;
+            padding: 10px 10px 10px 10px;
             text-align: center;
         }
 
